remove some unwantd menus

--- a/src/coding4kids/i18n/en.yaml
+++ b/src/coding4kids/i18n/en.yaml
@@ -79,8 +79,8 @@
 - id: enter_email
   translation: Enter your email…
 
-- id: company
-  translation: company
+- id: organisation
+  translation: organisation
 
 - id: links
   translation: links
